--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@
   jobs:
     build-and-push:
       name: Build and push to ECR
-      runs-on: ubuntu-18.04
+      runs-on: ubuntu-latest
       steps:
         - name: Checkout
           uses: actions/checkout@v2
