--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@
             ECR_REPOSITORY: rei-do-gado
             IMAGE_TAG: latest
           run: |
-            echo "listagem na pasta:"
+            echo listagem na pasta:
             la -a
-            echo "docker build:"
+            echo docker build:
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
