--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: rei-do-gado
             IMAGE_TAG: latest
-          run: |
-            echo docker build:
-            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#          run: |
+#            echo docker build:
+#            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
