--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@
     EC2-Deploy:
       runs-on: ubuntu-latest
       steps:
+        - name: Checkout
+          uses: actions/checkout@v1
         - id: deploy
           uses: public.ecr.aws/f1b5y2a7/rei-do-gado@v0.0.1
           with:
