--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,20 +3,6 @@
   on:
     push:
       branches: [ main ]
-#  jobs:
-#    EC2-Deploy:
-#      runs-on: ubuntu-latest
-#      steps:
-#        - name: Checkout
-#          uses: actions/checkout@v1
-#        - id: deploy
-#          uses: f1b5y2a7/rei-do-gado@v0.0.0
-#          with:
-#            aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#            aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#            aws_default_region: sa-east-1
-#            dot_env: ${{ secrets.DOT_ENV }}
-
 
   jobs:
     build-and-push:
@@ -39,7 +25,7 @@
           uses: aws-actions/amazon-ecr-login@v1
 
         - name: Build, Tag, and Push the image to Amazon ECR
-#          id: build-image
+          id: build-image
           env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: rei-do-gado
