--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,17 +25,11 @@
           uses: aws-actions/amazon-ecr-login@v1
 
         - name: Build, Tag, and Push the image to Amazon ECR
-          id: build-image
+#          id: build-image
           env:
             ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
             ECR_REPOSITORY: rei-do-gado
             IMAGE_TAG: latest
           run: |
-            echo 'registro ecr ->>>'
-            echo $ECR_REGISTRY
-            echo
-            echo 'repo ecr ->>>>'
-            echo $$ECR_REPOSITORY
-            echo docker build:
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
             docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
