--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,35 @@
-name: Deploy to ECR
+name: Build and push image spring-boot app to AWS ECR
 
 on:
 
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
-  build:
+  build-and-push:
 
-    name: Build Image
+    name: Build and push to ECR
     runs-on: ubuntu-latest
 
 
     steps:
 
-      - name: Check out code
+      - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-AWS-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: sa-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Build, Tag, and Push the image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: rei-do-gado
